<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"

    tools:context="application.mobileforms.Login">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:alpha="0.2"
        android:background="@color/colorAccent"
        android:foreground="@drawable/skincare"
        android:orientation="vertical"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </LinearLayout>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_field"
        android:layout_marginBottom="70dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_alignStart="@+id/password_field"
        android:layout_alignEnd="@+id/SigninPatient" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_alignStart="@+id/signindoctor"
        android:layout_alignEnd="@+id/SigninPatient" />

    <Button
        android:id="@+id/signindoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_field"
        android:layout_marginStart="20dp"
        android:layout_marginTop="71dp"
        android:background="@color/colorAccentLight"
        android:text="@string/sign_in_as_doctor"
        android:textAllCaps="false"
        android:textColor="@color/colorAccentDark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/SigninPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/signindoctor"
        android:layout_alignBottom="@+id/signindoctor"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:background="@color/colorAccentLight"
        android:enabled="true"
        android:text="@string/sign_in_as_patient"
        android:textAllCaps="false"
        android:textColor="@color/colorAccentDark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />


</RelativeLayout>
