<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentlight2"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:foreground="@drawable/skincare"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <EditText
        android:id="@+id/NameEdit2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="18sp"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginStart="15dp" />

    <EditText
        android:id="@+id/NewEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/PhoneNo"
        android:layout_alignStart="@+id/PhoneNo"
        android:layout_below="@+id/PhoneNo"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:visibility="visible" />

    <EditText
        android:id="@+id/PhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/NameEdit2"
        android:layout_alignStart="@+id/NameEdit2"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:visibility="visible" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_enter_username"
        android:textColor="@color/colorAccentDark"
        android:textSize="20sp"
        android:layout_marginTop="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NewEmail2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:background="@color/colorAccent"
        android:text="Add"
        android:textColor="@color/colorAccentDark2"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/NameEdit2"
        android:layout_alignStart="@+id/NameEdit2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/NameEdit2"
        android:layout_below="@+id/password_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="Re-enter your password"
        android:textColor="@color/colorAccentDark" />

    <Button
        android:id="@+id/Add_Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/NextButton"
        android:layout_below="@+id/NextButton"
        android:layout_marginTop="22dp"
        android:background="@color/colorAccent"
        android:text="Submit"
        android:textColor="@color/colorAccentDark2"
        android:textStyle="bold"
        android:visibility="visible" />


</RelativeLayout>