<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentlight2"
    android:orientation="vertical">
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:alpha="0.2"-->
    <!--android:foreground="@drawable/skincare"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->


    <EditText
        android:id="@+id/NameEdit2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="18sp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp" />

    <EditText
        android:id="@+id/Email_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/PhoneNo"
        android:layout_alignStart="@+id/PhoneNo"
        android:layout_below="@+id/PhoneNo"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/PhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_text"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/password_text"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="username"
        android:textColor="@color/colorAccentDark"
        android:textSize="20sp"
        android:layout_marginStart="26dp"
        android:layout_below="@+id/Add_Information"

        android:layout_marginTop="35dp" />

    <Button
        android:id="@+id/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/Email_Text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="21dp"
        android:background="@color/colorAccent"
        android:text="Submit"
        android:textColor="@color/colorAccentDark2"
        android:textStyle="bold"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPassword"

        android:layout_below="@+id/NameEdit2"
        android:layout_alignStart="@+id/NameEdit2" />

    <TextView
        android:id="@+id/SameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="47dp"
        />

    <EditText
        android:id="@+id/BirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/NextButton"
        android:layout_alignStart="@+id/Email_Text"
        android:layout_below="@+id/Email_Text"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="Birth Date"
        android:inputType="date"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Re-enter Password"
        android:textColor="@color/colorAccentDark"
        android:textSize="18sp"
        android:layout_alignTop="@+id/password_text"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/password_text" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Email_Text"
        android:layout_alignStart="@+id/BirthDate"
        android:layout_below="@+id/BirthDate"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="Gender"
        android:inputType="text|textPersonName"
        android:visibility="invisible" />

    <AutoCompleteTextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/NextButton"
        android:layout_alignStart="@+id/gender"
        android:layout_below="@+id/gender"
        android:layout_marginTop="11dp"
        android:completionHint="Status"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BirthDate"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:background="@color/colorAccentLight"
        android:text="Next"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/ChangeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/PhoneNo"
        android:layout_toEndOf="@+id/textView6"
        android:text="Choose Another Name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />


</RelativeLayout>